+added basic add user feature

--- a/UPLB-P2P.Website/appsettings.json
+++ b/UPLB-P2P.Website/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "P2PDbConnectionString": "Server=DESKTOP-S2F5V3M\\SQLEXPRESS;Database=UPLBP2PDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+    "P2PDbConnectionString": "Server=DESKTOP-RGFPQBG;Database=UPLBP2PDb;Trusted_Connection=True;TrustServerCertificate=Yes"
   }
 }
