--- a/P2P/P2P/appsettings.json
+++ b/P2P/P2P/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "P2PDbConnectionString": "Server=DESKTOP-S2F5V3M\\SQLEXPRESS;Database=UPLBP2PDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+  }
 }
