+ login and dashboard changes

--- a/P2P/P2P/P2P.csproj
+++ b/P2P/P2P/P2P.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Content\Images\" />
+  </ItemGroup>
+
 </Project>
